@@ -17,7 +17,8 @@
   <version>5.0.0-SNAPSHOT</version>
 
   <properties>
-    <old.version>4.7.1</old.version>
+    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
   </properties>
 
   <modules>
@@ -27,6 +28,7 @@
     <module>modules/wem-web</module>
     <module>modules/wem-taglib</module>
     <module>modules/wem-webapp</module>
+    <module>modules/wem-itest</module>
   </modules>
 
   <dependencies>
@@ -45,7 +47,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>3.1.0.RELEASE</version>
+      <version>3.2.0.RELEASE</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -54,12 +56,51 @@
       <version>1.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>1.0.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>1.0.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-picocontainer</artifactId>
+      <version>1.0.11</version>
+      <scope>test</scope>
+    </dependency>
+    <!--dependency>
+      <groupId>org.spockframework</groupId>
+      <artifactId>spock-core</artifactId>
+      <version>0.6-groovy-1.8</version>
+      <scope>test</scope>
+    </dependency-->
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <argLine>-Xmx2048m -XX:MaxPermSize=700m -Djava.awt.headless=true</argLine>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
   <repositories>
     <repository>
       <id>enonic.repo</id>
-      <url>http://repo.enonic.com/artifactory/public</url>
+      <url>http://repo.enonic.com/maven</url>
     </repository>
   </repositories>
 
